// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createValues > str 1`] = `
"(VALUES
(8::INT,'hhh'::TEXT),
(9,'row2'),
(9,'row2'),
(MAXIMUM(1,2),NULL))
AS customName(age,name)"
`;

exports[`createValues断言 > str 1`] = `
"(VALUES
('[1]'::JSONB,NULL::TEXT),
(ARRAY[2],NULL))
AS customName(age,name)"
`;

exports[`objectListToValuesList > auto-columns 1`] = `
"(1,3,DEFAULT),
(2,4,99)"
`;

exports[`objectListToValuesList > auto-columns 2`] = `
"(1,3),
(2,4)"
`;

exports[`objectListToValuesList > auto-columns-ignore-undefined-keys 1`] = `
"(1,3,DEFAULT,DEFAULT),
(2,4,DEFAULT,99)"
`;

exports[`objectListToValuesList > auto-columns-ignore-undefined-keys 2`] = `
"(1,3,DEFAULT),
(2,4,DEFAULT)"
`;

exports[`objectListToValuesList > define-type 1`] = `
"(1::INT,3),
(2,4)"
`;

exports[`objectListToValuesList > select-keys 1`] = `
"(1,3),
(2,4)"
`;

exports[`objectToValues-auto-columns 1`] = `"1,3,DEFAULT"`;
